...
                    shadowOpacity: 0.3,
                    shadowRadius: 2.62,
                    elevation: 8
                }}
            >
                <Input
                    testID="test-comment"
                    value={text}
                    onChangeText={changeText}
                    onSelectionChange={selectionChange}
                    ref={input}
                    placeholder="Envie um comentário"
                    placeholderTextColor="#4e4e4e8f"
...
                    //  selection={{ start: selection, end: selection }}
                    align="center"
                    background="#fafafa"
                    mBottom={false}
                />
                <Press
                    testID="SendTest"
                    onPress={checkConnect.bind(
                        {},
                        isConnected,
                        handleCreateComment
                    )}
                >
...
