...
                {notFound ? (
                    <Container align="center" marg="20px 0 0 0">
                        <Text>Esse post não existe mais</Text>
                    </Container>
                ) : (
                    <FlatList
                        testID="scrollView"
                        contentContainerStyle={{
                            paddingTop: 15,
                            paddingBottom: 10
                        }}
                        //itemHeight={getCommentHeight}
                        //headerHeight={getHeaderHeight}
...
                                        justifyContent: 'space-between',
                                        alignItems: 'center',
                                        marginVertical: 20
                                    }}
                                >
                                    <Title size={16} align="left">
                                        Comentários
                                    </Title>
                                </View>
                            </View>
                        }
                        data={comments}
                        renderItem={renderItem}
...
